Update - Form to add a new department

--- a/MVC_CRUD_APP/Views/Department/Create.cshtml
+++ b/MVC_CRUD_APP/Views/Department/Create.cshtml
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label asp-for="DeptName" class="control-label"></label>
                 <input asp-for="DeptName" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="DeptName" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
