Edit View : allows users to modify existing department records.

--- a/MVC_CRUD_APP/Views/Department/Edit.cshtml
+++ b/MVC_CRUD_APP/Views/Department/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿
-@* The Edit view allows users to modify existing department records. *@
+﻿@* The Edit view allows users to modify existing department records. *@
 
 @model MVC_CRUD_APP.Models.Department
 
